Allow null itemstack for Player#sendEquipmentChange